pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
  labels:
    env: demo
    tier: frontend
spec:
  containers:
  - name: nginx-cont
    image: nginx:latest
    ports:
    - containerPort: 80
