cluster_ip.yml
apiVersion: v1
kind: Service
metadata:
 name: nginx-clusterip
spec:
  type: ClusterIP #optional for clusterIp service
  selector:
    app: nginx
  ports:
  - port: 8080 # service port
    targetPort: 80 # containerPort
