nodeport_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-np
spec:
  type: NodePort
  selector:
    app: nginx # this should match the label of deployment
  ports:
  - port: 80
    nodePort: 32000 # it lies b/w 32000-32767 something
