ingress_egress_np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: combined-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: my-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: allowed
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24


#This policy allows ingress traffic from pods with the label access: allowed and allows egress traffic to the IP range 10.0.0.0/24.
