np_allow_from_specific_ns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-namespace
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: my-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: trusted-namespace


#This policy allows ingress traffic to pods with the label app: my-app from any pod in the namespace 
#with the label name: trusted-namespace
