np_policy_allow_traffic-from_specific_pod.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-some-pods
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: my-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: allowed


#This policy applies to pods with the label app: my-app in the default namespace.
# It allows ingress traffic only from pods with the label access: allowed.
